RESOLVED FIXED35165
plugins/set-status.html fails on Windows bot
https://bugs.webkit.org/show_bug.cgi?id=35165
Summary plugins/set-status.html fails on Windows bot
Alexey Proskuryakov
Reported 2010-02-19 10:27:56 PST
http://build.webkit.org/results/Windows%20Release%20%28Tests%29/r55012%20%289239%29/plugins/set-status-pretty-diff.html This is a pre-existing difference between Mac and Windows that's uncovered by this new test - Mac ignores null messages in NPN_SetMessage, while Windows treats them as empty ones. Mac Firefox sets status to "Done" when message is null - and since we don't say "Done" after finishing the load, the closest equivalent is an empty status.
Attachments
proposed fix (3.23 KB, patch)
2010-02-19 10:56 PST, Alexey Proskuryakov
mitz: review+
Alexey Proskuryakov
Comment 1 2010-02-19 10:56:44 PST
Created attachment 49095 [details] proposed fix
Alexey Proskuryakov
Comment 2 2010-02-19 11:00:04 PST
Note You need to log in before you can comment on or make changes to this bug.