        Reviewed by Dan Bernstein.

https://bugs.webkit.org/show_bug.cgi?id=35165
        plugins/set-status.html fails on Windows bot

        * Plugins/Hosted/NetscapePluginInstanceProxy.mm:
        (WebKit::NetscapePluginInstanceProxy::status):
        * Plugins/WebNetscapePluginView.mm:
        (-[WebNetscapePluginView status:]):
        Match Windows port behavior (and also Firefox one, in a way) - pass null status messages as
        empty ones to chrome.



Canonical link: https://commits.webkit.org/46326@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55021 268f45cc-cd09-0410-ab3c-d52691b4dbfc